# Quant-analysis-trading-bot

./: README.md
riskfusion_alpha/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  diagnostic.py  docker-compose.yml  pyproject.toml  verify_install.py  verify_ladder.py
riskfusion_alpha/.github/workflows/: ci.yml  security.yml
riskfusion_alpha/configs/: default.yaml
riskfusion_alpha/deploy/systemd/: riskfusion.service  riskfusion.timer
riskfusion_alpha/docs/: crazy_quant_ladder.md  leakage_playbook.md  model_registry.md  paper_report_spec.md  research_protocol.md  step1_distributional_alpha.md  step2_meta_labeler.md  step3_cvxpy_optimizer.md  step4_graph_cluster.md  step5_event_multitask.md  step6_regime_switching.md  step7_online_learning.md
riskfusion_alpha/riskfusion/: __init__.py  cli.py  config.py  daily_runner.py  storage.py
riskfusion_alpha/riskfusion/backtest/: engine.py
riskfusion_alpha/riskfusion/dashboard/: app.py
riskfusion_alpha/riskfusion/execution/: __init__.py  alpaca_connector.py  oms.py
riskfusion_alpha/riskfusion/features/: build_features.py  event_features.py  graph_features.py  sentiment.py  store.py  technical.py
riskfusion_alpha/riskfusion/ingest/: ingest_events.py  (+1 more)
riskfusion_alpha/scripts/: ingest_history.py
riskfusion_alpha/tests/: test_alpha_quantiles.py  test_cli_smoke.py  test_drift_monitoring.py  test_event_labeling.py  test_event_multitask.py  test_event_risk_model.py  test_execution.py  test_graph_cluster.py  test_hpo.py  test_meta_labeler.py  test_online_learning.py  test_optimizer_cvxpy.py  test_permutation_test.py  test_polygon_provider.py  test_regime.py  test_registry.py  test_report_generation.py  test_research_data.py  test_retry_rate_limit.py  test_transformer_model.py  test_validation.py  test_walkforward.py
(+121 files in other folders)
