[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["riskfusion"]

[project]
name = "riskfusion"
version = "0.2.0"
description = "RiskFusion Alpha: Production ML Quant System"
authors = [{name = "Antigravity", email = "bot@riskfusion.ai"}]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "yfinance>=0.2.28",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "streamlit>=1.25.0",
    "plotly>=5.15.0",
    "ta-lib-bin; platform_system=='Windows'",
    "sentence-transformers>=2.2.2",
    "torch>=2.0.0",
    "textblob>=0.17.0",
    "optuna>=3.0.0",
    "schedule>=1.2.0",
    "pydantic>=2.0.0",
    "pandera>=0.17.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-requests",
    "types-PyYAML",
    "pandas-stubs",
    "pip-audit>=2.6.0"
]

[project.scripts]
riskfusion = "riskfusion.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=riskfusion --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I"] # Pyflakes, pycodestyle, bugbear, isort
ignore = ["E501"] # Let black/ruff format handle line length mostly

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false # Gradual typing
ignore_missing_imports = true # For libs without stubs (yfinance, etc)

[[tool.mypy.overrides]]
module = "riskfusion.*"
disallow_untyped_defs = false # Stricter for our code eventually
